# anonymousSigmetricsprg

./: .gitignore  README.md  pyproject.toml  requirements.txt  todos.md
apps/dfl/: Dockerfile  README.md  allsims.py  cdfl.py  cfl.py  clustering.py  compose.sh  conf.py  conf_eval.py  data.py  data_dist.py  docker-entrypoint.sh  fixed_data_dist_env_gen.py  latsinit.py  logs.py  main.py  model.py  optim.py  otel-collector-conf.yaml  otel.py  peers_selection.py  repro.py  requirements.txt  search_data.py  similarity.py  singletons.py  son_agg.py  sync.py  todos.md  topogen.py  train.py
apps/dfl/compose-gen/: Dockerfile  main.py  requirements.txt
apps/dfl/dns/: dnsmasq-docker-entrypoint.sh  dnsmasq.conf.tmpl  resolv.conf.tmpl
apps/dfl/exts/: asyncio_exts.py  dfl_exts.py  px_exts.py  sklearn_exts.py  torch_exts.py
apps/dfl/finetunes/: bs.ipynb  bs.py  kkk.ipynb  kkk.py  lr-bs.md  lr.ipynb  lr.py  prune.ipynb  requirements.txt
apps/dfl/logs/: prep.py  raw.py  requirements.txt  run.ipynb  runs.ipynb  utils.py
apps/example/: main.py  requirements.txt
example/: SimilaritySort.py  initiator_selection.py
p2psims/: aggregation.py  clustering.py  node.py  similarity.py
p2psims/extensions/: binpacking.py  datetime.py  queue.py
p2psims/extensions/logging/: __init__.py
p2psims/protos/: gen.sh  initiator.proto  initiator_pb2.py  initiator_pb2.pyi  initiator_pb2_grpc.py  peer.proto  peer_pb2.py  peer_pb2.pyi  peer_pb2_grpc.py  representative.proto  representative_pb2.py  representative_pb2.pyi  representative_pb2_grpc.py
