[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'p2psims'
version = '0.0.0'
requires-python = '>=3.12'
dependencies = [
    'protobuf~=5.29',
    'grpcio~=1.69',
    'numpy~=2.2',
    'scipy~=1.15',
    'scikit-learn~=1.6',
    'sympy~=1.13',
    'torch~=2.6',
    'binpacking~=1.5',
    'tenacity~=9.1'
]

[tool.hatch.build.targets.sdist]
exclude = ['apps']